Correção do exercício da lista 10